--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,9 @@
 
     <div class="footer-col-wrapper">
       <p>{{ site.description | escape }}</p>
-      <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+      <p>This site is currently under development and will be updated frequently.</p>
+<!--      <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+-->
     </div>
   </div>
 
