Add event and skeleton page.

--- a/_sass/customized.scss
+++ b/_sass/customized.scss
@@ -7,3 +7,19 @@ img {
 p {
   text-align: justify;
 }
+
+table {
+  margin-top: 2ex;
+}
+
+.class-name {
+  font-weight: bold;
+}
+
+.page-section {
+  margin-top: 2ex;
+}
+
+address {
+  font-style: normal;
+}
