--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,7 @@
     <div class="footer-col-wrapper">
       <p>{{ site.description | escape }}</p>
       <p>This site is currently under development and will be updated frequently.</p>
-<!--      <a href="mailto:{{ site.email }}">{{ site.email }}</a>
--->
+      Contact: <a href="mailto:{{ site.email }}">{{ site.email }}</a>
     </div>
   </div>
 
