--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
       </span>
 
       <div class="trigger">
-        {% for my_page in site.pages %}
+        {% for my_page in site.html_pages %}
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
           {% endif %}
