--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
     <div class="footer-col-wrapper">
       <p>{{ site.description | escape }}</p>
-      <p>This site is currently under development and will be updated frequently.</p>
+      <p>We are still in the process of developing this web site and constantly updating its contents. </p>
       Contact: <a href="mailto:{{ site.email }}">{{ site.email }}</a>
     </div>
   </div>
