--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,7 @@
         <a class="page-link" href="/event/">Event</a>
         <a class="page-link" href="/spirituality/">Spirituality</a>
         <a class="page-link" href="/resource/">Resource</a>
+        <a class="page-link" href="http://blog.innermeditation.life">Blog</a>
       </div>
 
     </nav>
