--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -72,12 +72,12 @@
     }
 
     &:hover .trigger {
-      //display: block;
+      display: block;
       padding-bottom: 5px;
     }
 
     .page-link {
-      //display: block;
+      display: block;
       padding: 5px 10px;
 
       &:not(:last-child) {
