--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -25,8 +25,8 @@
 }
 
 .site-nav {
-  float: left;
-  margin-left: 2em;
+  float: right;
+  //margin-left: 2em;
   line-height: 56px;
 
   .menu-icon {
@@ -69,6 +69,7 @@
     .trigger {
       clear: both;
       display: none;
+      cursor: pointer;
     }
 
     &:hover .trigger {
