--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -26,7 +26,6 @@
 
 .site-nav {
   float: right;
-  //margin-left: 2em;
   line-height: 56px;
 
   .menu-icon {
@@ -48,7 +47,7 @@
     top: 9px;
     right: $spacing-unit / 2;
     background-color: $background-color;
-    border: 1px solid $grey-color-light;
+    //border: 1px solid $grey-color-light;
     border-radius: 5px;
     text-align: right;
 
@@ -75,7 +74,7 @@
     &:hover .trigger {
       display: block;
       padding-bottom: 5px;
-      cursor: pointer;
+      border: 1px solid $grey-color-light;
     }
 
     .page-link {
