Add a sentence below title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,4 +31,10 @@
     </nav>
   </div>
 
+  <div class="wrapper">
+    <div class="logo">
+    Achieve health, wellness, and spirituality
+    </div>
+  </div>
+
 </header>
