--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,8 +32,8 @@
   </div>
 
   <div class="wrapper">
-    <div class="logo">
-    Achieve health, wellness, and spirituality
+    <div class="slogan">
+    brings good health, wellness, enlightenment
     </div>
   </div>
 
