--- a/_sass/customized.scss
+++ b/_sass/customized.scss
@@ -28,3 +28,10 @@ address {
 .page-title {
   text-align: center;
 }
+
+.slogan {
+  display: block;
+  font-size: smaller;
+  margin-top: -1.5ex;
+  float: left;
+}
