--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
 
   <div class="wrapper">
     <div class="slogan">
-    brings good health, wellness, enlightenment
+    brings good health, wellness and enlightenment
     </div>
   </div>
 
