--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
         <a class="page-link" href="/event/">Event</a>
         <a class="page-link" href="/spirituality/">Spirituality</a>
         <a class="page-link" href="/resource/">Resource</a>
-        <a class="page-link" href="http://sv.mikecrm.com/j1xDwH5">Follow</a>
+        <a class="page-link" href="http://sv.mikecrm.com/j1xDwH5">Connect</a>
 
       </div>
 
