--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,8 +22,9 @@
           <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
           {% endif %}
         {% endfor %} -->
-        <a class="page-link" href="http://blog.innermeditation.life">Blog</a>
+        <a class="page-link" href="/practice/">Practice</a>
         <a class="page-link" href="/event/">Event</a>
+        <a class="page-link" href="http://blog.innermeditation.life">Blog</a>
 <!--
         <a class="page-link" href="/spirituality/">Spirituality</a>
         <a class="page-link" href="/resource/">Resource</a>
