Update domain to inner-meditation.org.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
         {% endfor %} -->
         <a class="page-link" href="/practice/">Practice</a>
         <a class="page-link" href="/event/">Event</a>
-        <a class="page-link" href="http://blog.innermeditation.life">Blog</a>
+        <a class="page-link" href="http://blog.inner-meditation.org">Blog</a>
 <!--
         <a class="page-link" href="/spirituality/">Spirituality</a>
         <a class="page-link" href="/resource/">Resource</a>
