--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light {
 .banner-w3ls-4,
 .banner-w3ls-5,
 .banner-agile {
-    min-height: 780px;
+    min-height: 680px;
 }
 
 .banner-w3ls-1 {
@@ -177,7 +177,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light {
     -moz-background-size: cover;
     -o-background-size: cover;
     -ms-background-size: cover;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
 }
 
 .banner-w3ls-3 {
@@ -187,7 +187,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light {
     -moz-background-size: cover;
     -o-background-size: cover;
     -ms-background-size: cover;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
 }
 
 .banner-w3ls-4 {
@@ -197,7 +197,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light {
     -moz-background-size: cover;
     -o-background-size: cover;
     -ms-background-size: cover;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
 }
 
 .banner-w3ls-5 {
@@ -207,7 +207,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light {
     -moz-background-size: cover;
     -o-background-size: cover;
     -ms-background-size: cover;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
 }
 
 /* slider */
