Update ticketing link.

--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light {
 }
 
 .banner-w3ls-4 {
-    background: url(../images/Mantak-teach-05.jpg) no-repeat;
+    background: url(../images/mantak-chia.jpeg) no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
