--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light {
 }
 
 .banner-w3ls-1 {
-    background: url(../images/Mantak-teach-01.jpg) no-repeat;
+    background: url(../images/MANTAK-CHIA-2020.jpg) no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
